<resources>
    <string name="app_name">Tap</string>
    <string name="action_logout">Logout</string>
    <string name="action_normal">Normal</string>
    <string name="action_help">Help</string>
    <string name="action_count">Counts</string>
    <string name="action_battery_test">Battery Test</string>
    <string name="action_upload_transactions">Upload Transactions</string>
    <string name="action_diagnostic">Diagnostic</string>
    <string name="action_camera">Camera</string>
    <string name="action_offender">Repeat Offenders</string>
    <string name="action_files">File Explorer</string>
    <string name="action_inspect">Inspections</string>
    <string name="action_settings">Settings</string>
    <string name="action_route_search">Routes</string>
    <string name="action_notifications">Notifications</string>
    <string name="search_hint_routes">Select Route</string>
    <string name="title_scan">Scan</string>
    <string name="title_pdf">PDFs</string>
    <string name="title_hotlist">Repeat Offender</string>
    <string name="reg_gcm">RegId is empty please register with GCM</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgotpass">Forgot Password?</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="search_hint">Search</string>
    <string name="scan_heading">%s - CHECK ID!</string>
    <string name="login_message">Login Successful!</string>
    <string name="action_history">History</string>
    <string name="scan_visitor">Vistor</string>
    <string name="scan_pass">Pass Exp</string>
    <string name="scan_bal">SV Bal</string>
    <string name="scan_passused">Pass Used</string>
    <string name="scan_metro_line">Metro Red Line</string>
    <string name="scan_reming_rides">Remaining Rides</string>
    <string name="scan_card_explration">Card Explration Date</string>
    <string name="scan_alert">Alert!</string>
    <string name="btn_read">Read</string>
    <string name="diagnostic_mpv_software">Application Software:</string>
    <string name="diagnostic_inspector">Inspector Name:</string>
    <string name="diagnostic_login_name">Current login Name:</string>
    <string name="diagnostic_login_id">Employee ID:</string>
    <string name="diagnostic_login_FirstName">First Name:</string>
    <string name="diagnostic_login_lastName">Last Name:</string>
    <string name="diagnostic_login_groupName">Group Name:</string>
    <string name="diagnostic_last_communication_time">Last Communication:</string>
    <string name="diagnostic_last_uploaded_time">Last Upload:</string>
    <string name="diagnostic_operator_data">Operator Data</string>
    <string name="diagnostic_repet_offender">Repeat Offender</string>
    <string name="diagnostic_line">Line</string>
    <string name="diagnostic_fare_data">Fare Data</string>
    <string name="diagnostic_fare_instruments">Fare Instruments</string>
    <string name="diagnostic_login_table">Login Table</string>
    <string name="lbl_settings_change_operator">Change Operator:</string>
    <string name="lbl_settings_change_region">Change Region:</string>
    <string name="btn_submit">Submit</string>
    <string name="prompt_operator">O,Regional</string>
    <string name="prompt_region">Antelope Valley Transit Authority</string>
    <string name="offender_dateofbirth">Date of Birth</string>
    <string name="offender_violation_description">Violation Description</string>
    <string name="offender_violation_code">Violation Code</string>
    <string name="offender_effective_date">Effective Date</string>
    <string name="offender_exclusion_period">Exclusion Period</string>
    <string name="offender_service_category">Service Category</string>
    <string name="offender_tapcard">TAP card</string>
    <string name="counts_yellow">Yellow</string>
    <string name="counts_green">Green</string>
    <string name="counts_Red">Red</string>
    <string name="counts_white">White</string>
    <string name="network_error">Network is not available at this time please try again later</string>
    <string name="server_error">Server is not responding.Please exit the MPV app</string>
    <string name="actionbar_opr">OPR %s</string>
    <string name="actionbar_route">Route 2 East</string>
    <string name="login_suggestion">Tap the badge or enter login credentials</string>
    <string name="login_error_msg">Invalid Details. Please check the Username-Password combination.</string>
    <string name="login_card_error_msg">Invalid card. Please tap a valid Card.</string>
    <string name="dialog_admin_title">Activate Administrator</string>
    <string name="dialog_admin_message">Please provide Device Administration permission to continue using MPV</string>
    <string name="login_fields_required">Please enter Username and Password</string>
    <string name="ok">OK</string>
    <string name="buttons_cancel">Cancel</string>
    <string name="diagnostic_Database">Database Version:</string>
    <string name="diagnostic_operating_mode">Operating mode:</string>
    <string name="diagnostic_date">Date:</string>
    <string name="route_search_no_result">No results found</string>
    <string name="gps_alert">Location Services are disabled on your device. Please enable them.</string>
    <string name="dialog_scan_card">Reading TAP card. Please wait.</string>
    <string name="toast_scan_incomplete">Scan interrupted or not a TAP card. Please try again.</string>
    <string name="no_results_found">No Results found</string>
    <string name="key_error_message">Keys unavilable. Please login again or contact your administrator for assistance.</string>
    <string name="key_error_download">Key download failed. Please relaunch app or contact your administrator for assistance.</string>
    <string name="key_error_parse">Key format not recognized. Please relaunch app or contact your administrator for assistance.</string>
    <string name="key_error_downloading">Keys downloading. Please wait or relaunch the application and ensure you have a network connection.</string>
    <string name="check_updates">Check Database Update</string>
    <string name="card_login_error">This card is not supported for login</string>
    <string name="password_dilog_title">Password Required</string>
    <string name="password_suggesion_message">Please set a password for your device</string>
    <string name="waiting_for_download">Database is downloading please wait...</string>
    <string name="dialog_exit_app">Do you want to exit the MPV app?</string>
    <string name="confirm">Confirm</string>
    <string name="offender_dialog_msg">Do you want to go to the repeat offender screen?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="log_con_mode_already_turned_on">Logging control mode has already been turned on</string>
    <string name="log_con_mode_enabled">Now logging control mode is enabled</string>
    <string name="now_you_steps_log_con_mode">You are now %d steps away from using logging control</string>
    <string name="btn_write">Deduct/Activate</string>
    <string name="toast_write_complete">Transaction successfully written to card</string>
    <string name="toast_write_err_mismatch">Transaction write aborted: different card detected</string>
    <string name="toast_write_err_stale">Transaction write aborted: card contents have changed</string>
    <string name="toast_write_err_write">Transaction write failed to complete</string>
    <string name="db_downloading">Downloading new Tap Database </string>
    <string name="db_unpacking">Unpacking new Tap Database</string>
    <string name="db_upgrading">A new Tab Database is available. %s</string>
    <string name="db_newschedule">Checking for Database update</string>
    <string name="db_offline">No Internet Connection. Application working in offline mode.</string>
    <string name="db_download_error">No Internet Connection. Database cannot be downloaded.</string>
    <string name="db_download_waiting">Database download waiting for approval</string>
    <string name="db_status">Your database is up to date</string>
    <string name="db_downloaded">Database downloaded successfully</string>
    <string name="db_downloading_fail">Database download failed. Please relaunch application.</string>
    <string name="db_downloading_criminal">Downloading new Criminal Database</string>
    <string name="db_unpacking_criminal">Unpacking new Criminal Database</string>
    <string name="scan">Scan</string>
    <string name="fragment_update">UPDATE</string>
    <string name="activation_success">Device Activated Successfully</string>
    <string name="activation_pending">Activation is pending, please try again later</string>
    <string name="activation_device_notfound">Device not found!</string>
    <string name="activation_waiting">Device waiting for Admin approval</string>
    <string name="status_removed_data">App data is removed, please relaunch the app.</string>
    <string name="status_device_locked">Device Locked Successfully</string>
    <string-array name="array_operator">
        <item>@string/prompt_operator</item>
    </string-array>
    <string-array name="array_region">
        <item>@string/prompt_region</item>
    </string-array>
    <string name="troubleshooting">Check app status on diagnostic screen. If anything other than \"Full\", device will need a data connection.\n\nScanning Troubleshooting in order of severity:\n-Rescan TAP Card\n-Scan different TAP Card\n-Restart MPV app\n-Disable then enable device NFC\n-Restart device\n-Have MPV admin disable and re-enable device\n-Clear app data or reinstall\n-Wipe device and reinstall</string>
    <string name="dialog_title_product_select">Select Product</string>
    <string name="dialog_title_sv_select">Select amount to deduct</string>
    <string name="dialog_title_stop_select">Select Stop in Route</string>
    <string name="dialog_title_transfer_selection">Select transfer to activate</string>
    <string name="msg_notification_not_activated">Please contact a TAP administrator to activate your device.</string>
    <string name="msg_notification_activiated">Assigned to %s</string>
    <string name="app_staus_not_activated">MPV Not Activated</string>
    <string name="app_status_activated">MPV Activated</string>
    <string name="dialog_write_confirm">Do you wish to proceed with the card deduction/activation?</string>
    <string name="msg_shift_start">Do you wish to start your shift? Please scan your badge.</string>
    <string name="msg_shift_end">Do you wish to end your shift? Please scan your badge.</string>
    <string name="btn_issue_citation">Issue Citation</string>
    <string name="app_not_available">Transit Court app not available to issue citation</string>
    <string name="app_launch_error">You do not have permission to issue citations. Please contact the Traffic Court administrator for more information</string>
    <string name="app_setup_not_ready">Transit Court app not setup. Please complete initial app setup and try again</string>
    <string name="frag_notification">FragmentNotification</string>
    <string name="authentication">Server settings/authentication</string>
    <string name="status">Status/location update</string>
    <string name="transactions_upload">Transactions Upload</string>
    <string name="inspectors">Inspectors</string>
    <string name="email_log">Email log</string>
    <string name="delete_log">Delete log</string>
    <string name="logging_control">Logging Control</string>
    <string name="performance_metrics">Performance Metrics</string>
    <string name="network">Network</string>
    <string name="dump_transactions">Dump Transactions</string>
    <string name="card_operations">Card Operations</string>
    <string name="upload">Upload File</string>
    <string name="upload_image">Choose Image</string>
    <string name="upload_video">Choose Video</string>
    <string name="comments">Comments</string>
</resources>