<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".fragments.FragmentSettings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pager_title_background"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/action_settings"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/img_power_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="5dp"
            android:src="@drawable/ic_power_off" />

        <TextView
            android:id="@+id/lbl_operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:text="@string/lbl_settings_change_operator"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_color_white" />

        <Spinner
            android:id="@+id/operator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/text_color_white"
            android:entries="@array/array_operator"
            android:padding="10dp"
            android:prompt="@string/prompt_operator" />

        <TextView
            android:id="@+id/lbl_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/lbl_settings_change_region"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_color_white" />

        <Spinner
            android:id="@+id/region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/text_color_white"
            android:entries="@array/array_region"
            android:padding="10dp"
            android:prompt="@string/prompt_region" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/btn_submit" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>