<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FragmentLoginControl">

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:visibility="gone"
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pager_title_background"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/logging_control"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.Medium" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="2">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color_white"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/authentication" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_server_settings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color_white"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/status"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_loc_update"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textColor="@color/text_color_white"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:text="@string/transactions_upload" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_transaction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textColor="@color/text_color_white"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:text="@string/inspectors" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_inspector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textColor="@color/text_color_white"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:text="@string/performance_metrics" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_performance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/text_color_white"
                    android:gravity="left"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:text="@string/network" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_network"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textColor="@color/text_color_white"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:text="@string/card_operations" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_card_operations"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textColor="@color/text_color_white"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:text="@string/dump_transactions" />

                <Button

                    android:text="Dump"
                    android:backgroundTint="@color/colorPrimary"
                    android:id="@+id/btn_dump_transactions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_email_log"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/email_log" />

                <Button
                    android:id="@+id/btn_delete_log"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:text="@string/delete_log" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>